# SMIP_UAV

./: .env  .gitignore  Makefile  README.md
data/tof_test/: metadata.yaml
docker/: Dockerfile  Dockerfile.cross  Dockerfile.dev  aarch64.cmake  drone-clean.sh  entrypoint.sh  voxl-compose.yml  workstation-compose.yml
docker/dependencies/: apt-deps.txt  pip-deps.txt
install/: local_setup.sh  setup.sh
install/smip_uav/lib/smip_uav/: smip_uav_node
install/smip_uav/share/ament_index/resource_index/parent_prefix_path/: smip_uav
install/smip_uav/share/smip_uav/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/smip_uav/share/smip_uav/cmake/: smip_uavConfig.cmake
log/: latest_build
smip_uav/: CMakeLists.txt  package.xml
smip_uav/action/: FlightPath.action
smip_uav/config/: smip_config.rviz  smip_uav_params.yaml  smip_uav_sim_params.param  smip_uav_voxl_params.param
smip_uav/include/smip_uav/common/: point_types.hpp  stop_watch.hpp
smip_uav/include/smip_uav/ros_nodes/: map_node.hpp  planner_node.hpp  trajectory_node.hpp  voxl_tf_node.hpp
smip_uav/include/smip_uav/surfel_map/: frame_builder.hpp  frame_processor.hpp  sensor_data_preprocess.hpp  surfel.hpp  surfel_map.hpp  voxel_grid.hpp  voxel_index.hpp
smip_uav/include/smip_uav/visualization/: depth_map_viz.hpp
smip_uav/include/smip_uav/viz_utils/: viz_base.hpp  viz_utils.hpp
smip_uav/launch/: smip_record_bag.launch.py  smip_uav_record_bag.launch.py  smip_uav_sim.launch.py  smip_uav_voxl.launch.py
smip_uav/src/: smip_exec.cpp
smip_uav/src/ros_nodes/: map_node.cpp  trajectory_node.cpp  voxl_tf_node.cpp
smip_uav/src/surfel_map/: frame_builder.cpp  frame_processor.cpp  sensor_data_preprocess.cpp  surfel.cpp  surfel_map.cpp  voxel_grid.cpp
smip_uav/src/visualization/: depth_map_viz.cpp
smip_uav/test/: CMakeLists.txt  test_fligth.cpp
smip_uav/test/paths/: forklift.yaml  statue_of_liberty.yaml  tank.path  warehouse.path  warehouse.yaml
